Update dice handler code version to 1.2.1