@@ -13,25 +13,25 @@ import java.util.ResourceBundle;
 import java.util.Set;
 
 /**
- * @author: create by Keith
- * @version: v1.0
- * @description: indi.eiriksgata.dice.message.handle
- * @date:2020/10/15
+ * author: create by Keith
+ * version: v1.0
+ * description: indi.eiriksgata.dice.message.handle
+ * date: 2020/10/15
  **/
 public class InstructHandle {
 
-    private static ResourceBundle scanPath = ResourceBundle.getBundle("trpg-dice-config");
-    private static Reflections reflections = new Reflections(scanPath.getString("reflections.scan.path"));
+    private static final ResourceBundle scanPath = ResourceBundle.getBundle("trpg-dice-config");
+    private static final Reflections reflections = new Reflections(scanPath.getString("reflections.scan.path"));
 
     //唯一公开的调用方法
-    public String instructCheck(MessageData data) throws DiceInstructException, IllegalAccessException, InstantiationException, InvocationTargetException {
+    public String instructCheck(MessageData<?> data) throws DiceInstructException, IllegalAccessException, InstantiationException, InvocationTargetException, NoSuchMethodException {
         //应当先判断传入的字符串长度和对象属性
         if (data.getMessage() == null || data.getMessage().length() < 1) {
             return trackInstructCases(data);
         }
 
         //先行判断是否符合指令样式
-        if (data.getMessage().substring(0, 1).equals(".") || data.getMessage().substring(0, 1).equals("。")) {
+        if (data.getMessage().charAt(0) == '.' || data.getMessage().charAt(0) == '。') {
             //将所有空格舍去 移除空格应该在指令方法中去实现，这里不再作统一处理
             //data.setMessage(data.getMessage().replaceAll(" ", ""));
             return trackInstructCases(data);
@@ -39,12 +39,12 @@ public class InstructHandle {
         throw new DiceInstructException(ExceptionEnum.DICE_INSTRUCT_NOT_FOUND);
     }
 
-    private String trackInstructCases(MessageData data) throws DiceInstructException, IllegalAccessException, InstantiationException, InvocationTargetException {
+    private String trackInstructCases(MessageData<?> data) throws DiceInstructException, IllegalAccessException, InstantiationException, InvocationTargetException, NoSuchMethodException {
         Set<Class<?>> typesAnnotatedWith = reflections.getTypesAnnotatedWith(InstructService.class);
         Method highestPriority = null;
-        Class highestClazz = null;
+        Class<?> highestClazz = null;
         String instructStr = null;
-        for (Class clazz : typesAnnotatedWith) {
+        for (Class<?> clazz : typesAnnotatedWith) {
             Method[] methods = clazz.getDeclaredMethods();
             for (Method method : methods) {
                 if (method.isAnnotationPresent(InstructReflex.class)) {
@@ -72,7 +72,7 @@ public class InstructHandle {
 
         if (highestPriority != null) {
             data.setMessage(data.getMessage().substring(instructStr.length()));
-            return (String) highestPriority.invoke(highestClazz.newInstance(), data);
+            return (String) highestPriority.invoke(highestClazz.getDeclaredConstructor().newInstance(), data);
 
         }
 
@@ -83,7 +83,6 @@ public class InstructHandle {
     //仔细的指令检测方法
     private boolean instructMessageCheck(String message, String instructStr) {
         //具体的逻辑判定 该检测主要作为 统一的指令检测 若单条指令需要作检测，请在@InstrctionReflex的方法中实现
-
         return message.contains(instructStr);
     }
 
